fix horizontal scroll

--- a/main.css
+++ b/main.css
@@ -291,7 +291,7 @@ p{
 /* ////////////////////// */
 
 .footer{
-  width: 100vw;
+  width: 100%;
   height: 5rem;
   background-color: #323232;
   display: flex;
